@@ -26,6 +26,7 @@ x2gokdrive (0.0.0.1-0x2go1) UNRELEASED; urgency=medium
     - fix infinite loop if reading of cookie has failed.
     - improve initialization of cursor frame and cache element structures.
     - improve clearing of the frame list.
+    - reiniting of frame and cursors caches by client request.
 
   [ Mihai Moldovan ]
   * Initial release:
